--- a/src/settings/config.yaml
+++ b/src/settings/config.yaml
@@ -3,18 +3,18 @@ github: https://github.com/snickyyy/Online-Chat-Golang
 app:
   secret_key: "${APP_SECRET_KEY}"
   name: "GoChat"
-  mode: "${APP_MODE}"
-  port: "${APP_PORT}"
-  debug: "${APP_DEBUG}"
+  mode: "dev"
+  port: 8000
+  debug: true
 
 db:
   host: "${DB_HOST}"
-  port: "${DB_PORT}"
+  port: 5432
   user: "${DB_USER}"
   password: "${DB_PASSWORD}"
-  database: "${DB_DATABASE}"
+  database: "postgres"
   sslmode: "${DB_SSL_MODE}"
 
 Auth:
-  access_token_ttl: "${AUTH_ACCESS_TOKEN_TTL}"
-  refresh_token_ttl: "${AUTH_REFRESH_TOKEN_TTL}"
+  access_token_ttl: 7200
+  refresh_token_ttl: 86400
