--- a/src/settings/config.yaml
+++ b/src/settings/config.yaml
@@ -15,6 +15,9 @@ db:
   database: "postgres"
   sslmode: "${DB_SSL_MODE}"
 
-Auth:
+auth:
   access_token_ttl: 7200
   refresh_token_ttl: 86400
+
+mongo:
+  uri: "${MONGO_URI}"
