--- a/src/settings/config.yaml
+++ b/src/settings/config.yaml
@@ -16,8 +16,7 @@ db:
   sslmode: "${DB_SSL_MODE}"
 
 auth:
-  access_token_ttl: 7200
-  refresh_token_ttl: 86400
+  session_auth_ttl: 86400
 
 mongo:
   uri: "${MONGO_URI}"
