--- a/src/settings/config.yaml
+++ b/src/settings/config.yaml
@@ -28,9 +28,11 @@ redis:
   host: "localhost"
   port: 6379
   password: ""
-  db:
-    session: 0
-    message: 1
+  prefixes:
+    session: "session:"
+    message: "message:"
+    confirm_email: "confirm_email:"
+    reset_password: "reset_password:"
 
 mail:
   username: "${MAIL_USERNAME}"
