--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,13 @@ jobs:
           echo "DB_DATABASE=testDB" >> .env.test
           echo "DB_HOST=postgres" >> .env.test
           echo "DB_PORT=5432" >> .env.test
+          
+          echo "APP_MODE=testtesttesttesttesttesttesttest" > .env
+          echo "DB_USER=test" >> .env
+          echo "DB_PASSWORD=test" >> .env
+          echo "DB_DATABASE=testDB" >> .env
+          echo "DB_HOST=postgres" >> .env
+          echo "DB_PORT=5432" >> .env
 
       - name: Install Docker Compose
         run: |
