--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,9 @@ jobs:
           go-version: '1.23.5'
 
       - name: Install golangci-lint
-        run: |
-          curl -sSfL https://github.com/golangci/golangci-lint/releases/download/v1.52.2/golangci-lint-1.52.2-linux-amd64.tar.gz | tar -xz -C /usr/local/bin
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
 
       - name: Run linters
         run: golangci-lint run ./...
