--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -8,9 +8,7 @@ services:
     restart: on-failure
     ports:
       - "8000:8000"
-    command:
-      - chmod +x ./commands/start_dev.sh
-      - ./commands/start_dev.sh
+    command: sh -c "chmod +x ./commands/start_dev.sh && ./commands/start_dev.sh"
     volumes:
       - ./:/OCG
     env_file:
