--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           version: latest
 
       - name: Run linters
-        run: golangci-lint run ./...
+        run: golangci-lint run --disable=errcheck --disable=govet ./...
 
   build:
     runs-on: ubuntu-latest
