--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
           go-version: '1.23.5'
 
       - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.64.8
+        run: |
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.64.8
+          export PATH=$PATH:$(go env GOPATH)/bin
 
       - name: Run linters
         run: golangci-lint run --disable=errcheck --disable=govet ./...
