--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -19,7 +19,7 @@ services:
       - redis
 
   postgres:
-    image: postgres:16.4
+    image: postgres:16.4-alpine
     container_name: postgres
     restart: on-failure
     ports:
