--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,5 +1,3 @@
-version: "1.0"
-
 services:
   backend:
     build: ./
@@ -19,7 +17,7 @@ services:
       - redis
 
   postgres:
-    image: postgres:16.4-alpine
+    image: postgres:16.4
     container_name: postgres
     restart: on-failure
     ports:
