--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -15,6 +15,14 @@ services:
       - postgres
       - mongo
       - redis
+    deploy:
+      resources:
+        limits:
+          cpus:   '2.0'
+          memory: '3G'
+        reservations:
+          cpus: '1.0'
+          memory: '1G'
 
   postgres:
     image: postgres:16.4
@@ -32,6 +40,14 @@ services:
       - POSTGRES_PORT=${DB_PORT}
     env_file:
       - .env
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: '2G'
+        reservations:
+          cpus: '0.5'
+          memory: '1G'
 
   redis:
     image: redis:7.0-alpine
@@ -41,6 +57,11 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/var/lib/redis/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: '1G'
 
   mongo:
     image: mongo
@@ -52,6 +73,14 @@ services:
       - .env
     volumes:
       - mongo_data:/data/db
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: '2G'
+        reservations:
+          cpus: '0.5'
+          memory: '1G'
 
 volumes:
   pg_data: { }
